@@ -419,6 +419,7 @@ extern struct Battle_Config {
 	unsigned short cell_stack_limit; // [Skotlex]
 	unsigned short skill_caster_check; // [Skotlex]
 	unsigned short sc_castcancel; // [Skotlex]
+	unsigned short sc_def_rate; // [Skotlex]
 } battle_config;
 
 void do_init_battle(void);
